--- a/cart.html
+++ b/cart.html
@@ -172,7 +172,7 @@
               </tr>
               <tr>
                <td colspan="2" style="text-align: center; color: red;">
-                 Free Home Service in only for Pune.Rest locations will be discussed on Order Confirmation Call.*
+                 Free Home Service only in Pune & others will be discussed on Confirmation Call.*
                </td>
              </tr>
               <tr>
