--- a/Admin/orders.html
+++ b/Admin/orders.html
@@ -116,9 +116,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="dropdown">
-              <a href="#" class="nav-link" data-toggle="dropdown" style="width: 120%">Master &#8615;</a>
+              <a href="#" class="nav-link" data-toggle="dropdown" style="width: 120%">Manage &#8615;</a>
               <ul class="dropdown-menu" style="background-color: #343a40!important">
-                <li ><a class="nav-link" href="./products.html">Products</a></li>
+                <li ><a class="nav-link" href="./categories.html">Products</a></li>
                 <li ><a class="nav-link" href="./faqs.html">FAQs</a></li>
               </ul>
             </li>
@@ -131,7 +131,7 @@
                 <li ><a class="nav-link" href="./orders.html?Mode=4">Serviced</a></li>
               </ul>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" style="cursor: pointer;">
               <a class="nav-link" ng-click="Logout()">Logout</a>
             </li>
           </ul>
